force-app/main/default/objects/managed_docs__c/managed_docs__c.object-meta.xml
<CustomObject>
    <label>Managed Docs</label>
    <nameField>
        <label>Document Name/#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managed Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>