force-app/main/default/objects/managed_docs__c/fields/Cas__c.field-meta.xml
<CustomField>
    <fullName>Cas__c</fullName>
    <label>Cas #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>