force-app/main/default/objects/managed_docs__c/fields/Chemical_Name__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Name__c</fullName>
    <label>Chemical Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>