force-app/main/default/objects/managed_docs__c/fields/DG_Class__c.field-meta.xml
<CustomField>
    <fullName>DG_Class__c</fullName>
    <label>DG Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>