force-app/main/default/objects/managed_docs__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Managed Docs</relationshipLabel>
    <relationshipName>Managed_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>