force-app/main/default/objects/managed_docs__c/fields/Hazardous_Substance__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Substance__c</fullName>
    <label>Hazardous Substance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>