force-app/main/default/objects/managed_docs__c/fields/Manufacturer_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_s_Name__c</fullName>
    <label>Manufacturer&apos;s Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>