force-app/main/default/objects/managed_docs__c/fields/Packaging_Group__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Group__c</fullName>
    <label>Packaging Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>l</fullName>
            </value>
            <value>
                <fullName>ll</fullName>
            </value>
            <value>
                <fullName>lll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>