force-app/main/default/objects/managed_docs__c/fields/Poison_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Poison_Schedule__c</fullName>
    <label>Poison Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S5</fullName>
            </value>
            <value>
                <fullName>S6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>