force-app/main/default/objects/managed_docs__c/fields/SDS_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SDS_Expiry__c</fullName>
    <inlineHelpText>SDS have an expiry date of 5 years from date created</inlineHelpText>
    <label>SDS Expiry</label>
    <type>Date</type>
</CustomField>