force-app/main/default/objects/managed_docs__c/fields/SOP_Name__c.field-meta.xml
<CustomField>
    <fullName>SOP_Name__c</fullName>
    <label>SOP Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>