force-app/main/default/objects/managed_docs__c/fields/Sub_Risk__c.field-meta.xml
<CustomField>
    <fullName>Sub_Risk__c</fullName>
    <label>Sub Risk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>