force-app/main/default/objects/managed_docs__c/fields/UN__c.field-meta.xml
<CustomField>
    <fullName>UN__c</fullName>
    <label>UN #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>