force-app/main/default/objects/managed_docs__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <inlineHelpText>SDS may be relevant to many WD Units</inlineHelpText>
    <label>WD Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rig #4</fullName>
            </value>
            <value>
                <fullName>Rig #6</fullName>
            </value>
            <value>
                <fullName>Rig #8</fullName>
            </value>
            <value>
                <fullName>Rig #10</fullName>
            </value>
            <value>
                <fullName>Rig #12</fullName>
            </value>
            <value>
                <fullName>Rig #14</fullName>
            </value>
            <value>
                <fullName>Rig #16</fullName>
            </value>
            <value>
                <fullName>Rig #18</fullName>
            </value>
            <value>
                <fullName>Rig #20</fullName>
            </value>
            <value>
                <fullName>Rig #22</fullName>
            </value>
            <value>
                <fullName>Rig #28</fullName>
            </value>
            <value>
                <fullName>Rig #30</fullName>
            </value>
            <value>
                <fullName>Rig #32</fullName>
            </value>
            <value>
                <fullName>Rig #24</fullName>
            </value>
            <value>
                <fullName>Rig #26</fullName>
            </value>
            <value>
                <fullName>Flushby 2</fullName>
            </value>
            <value>
                <fullName>Camp #1</fullName>
            </value>
            <value>
                <fullName>Camp #2</fullName>
            </value>
            <value>
                <fullName>Camp #3</fullName>
            </value>
            <value>
                <fullName>Camp #4</fullName>
            </value>
            <value>
                <fullName>Camp #6</fullName>
            </value>
            <value>
                <fullName>Camp #7</fullName>
            </value>
            <value>
                <fullName>Camp #8</fullName>
            </value>
            <value>
                <fullName>Camp #9</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Stores</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Roma Office</fullName>
            </value>
            <value>
                <fullName>Brisbane Office</fullName>
            </value>
            <value>
                <fullName>Camp 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>