force-app/main/default/objects/managed_docs__c/recordTypes/SDS.recordType-meta.xml
<RecordType>
    <fullName>SDS</fullName>
    <active>true</active>
    <label>SDS</label>
</RecordType>