force-app/main/default/objects/managed_docs__c/recordTypes/SOP.recordType-meta.xml
<RecordType>
    <fullName>SOP</fullName>
    <active>true</active>
    <label>SOP</label>
</RecordType>