force-app/main/default/objects/managed_docs__c/listViews/SOP_rigs_all.listView-meta.xml
<ListView>
    <fullName>SOP_rigs_all</fullName>
    <columns>NAME</columns>
    <columns>Issue_Date__c</columns>
    <columns>Revision__c</columns>
    <columns>Final_Approver__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>managed_docs__c.SOP</value>
    </filters>
    <label>WD SOP - All</label>
</ListView>